# limitless_tools

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  config.toml.example  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: AUDIO.md  PRD.md  TASKS.md  USAGE.md
limitless_tools/cli/: main.py
limitless_tools/config/: config.py  env.py  logging.py  paths.py
limitless_tools/http/: client.py
limitless_tools/models/: lifelog.py
limitless_tools/services/: lifelog_service.py
limitless_tools/storage/: json_repo.py  state_repo.py
scripts/: export_markdown_range.py  release_check.sh
tests/: conftest.py
tests/story/: test_fetch_to_files.py  test_sync_state_resume.py
tests/unit/: test_cli_audio_placeholder.py  test_cli_batch_size.py  test_cli_config_env_vars.py  test_cli_config_file.py  test_cli_config_output_dir.py  test_cli_configure.py  test_cli_env_integration.py  test_cli_error_handling.py  test_cli_export_csv.py  test_cli_export_markdown_combine.py  test_cli_export_markdown_default.py  test_cli_export_markdown_frontmatter.py  test_cli_fetch.py  test_cli_json_output.py  test_cli_list_plain_output.py  test_cli_logging.py  test_cli_logging_json_shape.py  test_cli_progress_reporting.py  test_cli_search.py  test_cli_search_regex_and_fuzzy.py  test_cli_sync.py  test_cli_timezone_profile_fallback.py  test_cli_timezone_validation.py  test_config_env_tz.py  test_http_allowlist.py  test_http_client.py  test_http_errors.py  test_http_retries.py  test_http_retry_after.py  test_http_retry_after_httpdate.py  test_http_timeout.py  test_http_user_agent.py  test_index_merge.py  test_lifelog_service_fetch.py  test_logging_security.py  test_models.py  test_models_defaults.py  test_package_version.py  test_service_errors.py  test_service_list_and_export.py  (+7 more)
