[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length handled via formatter/editor; we keep 100 as guide
]

[tool.ruff.lint.isort]
known-first-party = ["limitless_tools"]
combine-as-imports = true
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-tools"
version = "0.1.0"
description = "Library and CLI to fetch Limitless lifelogs and store locally"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "requests>=2.31,<3",
]

[project.scripts]
limitless = "limitless_tools.cli.main:main"

